<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.smemo.udacitystudy.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="22sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/menuStreamer"
                style="@style/MainMenuButton"
                android:text="@string/main_menu_streamer" />

            <Button
                android:id="@+id/menuScore"
                style="@style/MainMenuButton"
                android:text="@string/main_menu_score" />

            <Button
                android:id="@+id/menuLibrary"
                style="@style/MainMenuButton"
                android:text="@string/main_menu_library" />

            <Button
                android:id="@+id/menuBigger"
                style="@style/MainMenuButton"
                android:text="@string/main_menu_bigger" />

            <Button
                android:id="@+id/menuReader"
                style="@style/MainMenuButton"
                android:text="@string/main_menu_reader" />

            <Button
                android:id="@+id/menuOwnApp"
                style="@style/MainMenuButton"
                android:background="@android:color/holo_red_dark"
                android:text="@string/main_menu_ownapp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
